@@ -45,12 +45,14 @@ import org.apache.druid.java.util.common.granularity.Granularities;
 import org.apache.druid.java.util.common.logger.Logger;
 import org.apache.druid.java.util.common.parsers.JSONPathSpec;
 import org.apache.druid.query.aggregation.AggregatorFactory;
+import org.apache.druid.query.aggregation.CountAggregatorFactory;
 import org.apache.druid.query.aggregation.DoubleMaxAggregatorFactory;
 import org.apache.druid.query.aggregation.DoubleMinAggregatorFactory;
 import org.apache.druid.query.aggregation.DoubleSumAggregatorFactory;
 import org.apache.druid.query.aggregation.FloatMaxAggregatorFactory;
 import org.apache.druid.query.aggregation.FloatMinAggregatorFactory;
 import org.apache.druid.query.aggregation.FloatSumAggregatorFactory;
+import org.apache.druid.query.aggregation.LongMaxAggregatorFactory;
 import org.apache.druid.query.aggregation.hyperloglog.HyperUniquesAggregatorFactory;
 import org.apache.druid.query.aggregation.hyperloglog.HyperUniquesSerde;
 import org.apache.druid.query.expression.TestExprMacroTable;
@@ -75,6 +77,8 @@ import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.Collectors;
+
+import static org.apache.druid.query.QueryRunnerTestHelper.QUALITY_CARDINALITY;
 
 /**
  *
@@ -183,13 +187,20 @@ public class TestIndex
   };
   public static final ImmutableList<AggregateProjectionSpec> PROJECTIONS = ImmutableList.of(
       new AggregateProjectionSpec(
-          "index_projection",
+          "daily_market_maxQuality",
           VirtualColumns.create(Granularities.toVirtualColumn(Granularities.DAY, "__gran")),
-          Arrays.asList(
-              new LongDimensionSchema("__gran"),
-              new StringDimensionSchema("market")
-          ),
-          new AggregatorFactory[]{new DoubleMaxAggregatorFactory("maxQuality", "qualityLong")}
+          List.of(new LongDimensionSchema("__gran"), new StringDimensionSchema("market")),
+          new AggregatorFactory[]{new LongMaxAggregatorFactory("maxQuality", "qualityLong")}
+      ),
+      new AggregateProjectionSpec(
+          "daily_countAndQualityCardinalityAndMaxLongNullable",
+          VirtualColumns.create(Granularities.toVirtualColumn(Granularities.DAY, "__gran")),
+          List.of(new LongDimensionSchema("__gran")),
+          new AggregatorFactory[]{
+              new CountAggregatorFactory("count"),
+              QUALITY_CARDINALITY,
+              new LongMaxAggregatorFactory("longNullableMax", "longNumericNull")
+          }
       )
   );
   public static final IndexSpec INDEX_SPEC = IndexSpec.DEFAULT;
